--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<body lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,5 +7,18 @@
 </head>
 <body>
     <h1>some heading</h1>
+</body>
+  
+<h1>My First HTML page</h1>
+<h4>Level 4 Heading</h4>
+<h6>Smallest Heading</h6>
+
+
+ Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus cumque pariatur, molestias assumenda magnam sequi soluta? Possimus nam veniam sunt porro sed quidem velit. Esse laborum id aspernatur nemo quod.
+
+<a href="https://www.youtube.com/" target=" _blank" >open Youtube </a> 
+<img src="download.jpeg" width="500" alt="anurag">
+<video controls  autopla muted loop src="https://www.boat-lifestyle.com/cdn/shop/files/quinn_ecywdgk2php34go30fyob4m1.mp4#t=0.1"></video>
+
 </body>
 </html>
