--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
         } 
 
         .link:hover{
-            color black;
+            color: black;
             text-decoration: underline;
         }
            
